syntax = "proto3";

option csharp_namespace = "TrackService";

service GrpcTrack {
	rpc GetTracks (GetRequests) returns (TrackResponse);
}

message GetRequests {}

message GrpcTrackModel {
	string id = 1;
	string title = 2;
	string artist = 3;
	string genre = 4;
}

message TrackResponse {
	repeated GrpcTrackModel track = 1;
}